2004-04-26  Theodore A. Roth  <troth@openavr.org>

	* config-ml.in: Remove file for autoconf/automake rewrite.
	* config.sub: Ditto.
	* configure.in: Ditto.
	* doconf: Ditto.
	* dodist: Ditto.
	* domake: Ditto.
	* reconf: Ditto.

2004-04-15  Theodore A. Roth  <troth@openavr.org>

	* configure.in:
	* crt1/Makefile.am:
	* include/avr/io.h:
	Add support infrastructure for mega48, mega88, mega168, tiny13,
	tiny2313 and at90can128.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AVR_LIBC_USER_MANUAL): Append version number.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h: Undefine EECR, EEDR, EEAR, EEARL, and EEARH
	before defining them to avoid conflict with predfined values in
	io.h.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iocan128.h (UDR0): Define.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iocan128.h: Deleted commented out #defines.
	Formatting cleanups.

2004-04-23  Theodore A. Roth  <troth@openavr.org>
[Contributed by Colin O'Flynn <coflynn@newae.com>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iocan128.h: New file.

2004-04-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega{64,128}

2004-04-22  Theodore A. Roth  <troth@openavr.org>

	[This fixes bug #8649.]
	* include/avr/sfr_defs.h (bit_is_set): Wrap sfr arg with _SFR_BYTE().
	(bit_is_clear): Ditto.

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/sfr_defs.h: Move _SFR_BYTE() and _SFR_WORD() #defines to
	be before first usage.

2004-04-20  Theodore A. Roth  <troth@openavr.org>
[Contributed by LAL@pro.onet.pl]

	[This closes patch #2651]
	* include/avr/iom169.h: Change SIG_UART0_RECV to SIG_USART_RECV.
	Change SIG_UART0_DATA to SIG_USART_DATA.
	Change SIG_UART0_TRANS to SIG_USART_TRANS.

2004-04-20  Theodore A. Roth  <troth@openavr.org>

	[This change should fix bug #8391]
	* include/avr/boot.h (__BOOT_LOCK_BITS_MASK): Remove.