@@ -1,5 +1,13 @@
 2004-04-26  Theodore A. Roth  <troth@openavr.org>
 
+	* Makefile.am (EXTRA_DIST): Remove references to deleted files.
+	Add bootstrap.
+	* bootstrap: New file.
+	* include/Makefile.am: New file.
+	* include/avr/Makefile.am: New file.
+
+2004-04-26  Theodore A. Roth  <troth@openavr.org>
+
 	* config-ml.in: Remove file for autoconf/automake rewrite.
 	* config.sub: Ditto.
 	* configure.in: Ditto.
